  - renderRglwidget() and renderPlaywidget() now have an optional argument
    outputArgs for use in dynamic R Markdown documents.
  - rglwidget() now warns if an object has too many vertices
  - transparent spheres sometimes showed rendering
    artifacts because they were not drawn from back to front.  (Reported by Atte Tenkanen; original fix improved so nested
    spheres should now work.  WebGL display could still be
    improved.)
  - par3dinterp() did not always choose the best direction for interpolation
    of the userMatrix.
  - added an approximation to "polar" mouse controls to WebGL display.
  - the "centers" attribute now refers to the individual facets
    of spheres, rather than the whole sphere.  Use "vertices" for
    that.
  - The togglewidget() function didn't work properly in Shiny.
  - Tried to give a more helpful startup error message on MacOS.
  - Added documentation to rglwidgetClass in Javascript.
  - vertexSetter() can now set plane parameters.
  - Modified platform.cpp so it works with __STRICT_ANSI__
    defined.
  - Fixed addition of attribute to NULL
  - Fixed bug where textures or normals caused readOBJ() to fail;
    added support for reading normals and texture coordinates.
  - As many browsers have dropped support for setting line width 
    in WebGL scenes, this has been redone in rglwidget() 
    code using a vertex shader.  
    Line endings and joins are rounded, not squared as in OpenGL.
  - The 65535 vertex limit has been removed (at least in browsers
    that support big indices).
  - The requirement that colours being controlled by an ageControl or vertexControl
    be duplicated in the original has been removed.
  - axes3d("bbox") didn't send parameters to bbox3d().
  - Fixed examples for snapshot3d() and writeASY() so that they don't
    change the working directory.
    
0.99.1
  - Christophe Geuzaine's GL2PS library (used by rgl.postscript())
    updated to version 1.4.0.